--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <h3>Weather Alert System</h3>
 
-    <p1>Register to get immediate text alerts when classes are canceled, the campus is closed, or other urgent notifications.</p>
+    <p>Register to get immediate text alerts when classes are canceled, the campus is closed, or other urgent notifications.</p>
 
   
     <figure>
