--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
     <hr>
 
-    <p2>This site was created for educational purposes only.</p2>
+    <p>This site was created for educational purposes only.</p>
 
     
 
