--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </figure>
 
 
-    <script type="text/javascript">
+    <script src="script.js">
 
       alert('Register to get immediate text alerts when classes are canceled, the campus is closed, or other urgent notifications.');
  
